   * The folding groups/kinds are now: comments, DDoc comments, module header comments, aggregate types, functions.
 * Fixed minor source range bugs for template references and typeof() references.
 * `is` and `!is` now considered keywords instead of operators for the purposes of syntax highlighting.
 * Fixed issue #41 and some other related parsing bugs with qualified expressions (DotIdExp).
 
== DDT 0.4.2 (2011-04-29) ==
 * Fixed issue #33, bug with spaces in projects names: made all variables in DMD response file resolve to quote escaped values.
 * Fixed bug where all D comments where considered DDoc comments for documentation hover.
 * Fixed limitation where problem hovers where not more prioritary than documentation hovers.
 * Fixed issue #37: F2 always brings up empty documentation hover.
 * Fixed issue #38: autocomplete crashing / very slow. (Content Assist takes very long to show up when many completion options are available)
 * Added support for editor code templates in Content Assist. 
 * Fixed bug in cast expression, where the cast type reference was ignored by the parser/semantic-engine; 
 * Fixed bug where DDoc comments where not associated with the corresponding symbol definition if that definition had protection, storage, linkage, or certain other kinds of attributes;
 * Implemented issue #35: format immutable keyword and @annotations.
    * Added (nothrow, pure, shared, immutable) keywords to syntax coloring
    * Added @annotations to syntax coloring (spaces after @ not supported, any identifier accepted)
    * Changed syntax coloring example in preferences
 * Fixed minor Content Assist bug where completions would not appear when requested on certain syntax errors.

== DDT 0.4.1 (2011-03-04) ==
 * Fixed some parser bugs. (mostly relating to Template Instance references and source with invalid syntax)
 * Fixed issue #25 and other source highlighting bugs (like nested comments being lexed as non-nested comments). 